# tjosa

./: README.md  pyproject.toml  pytest.ini  requirements.txt  tjosa.py
.github/workflows/: flake8.yml  pylint.yml  pytest.yml  python-publish.yml
docs/: benchmark.md
test/: josa.py  josa_only.py  mappings.py  perftest.py  requirements-perftest.txt
tjosa/: __init__.py  core.py  josa.py  josa_only.py  josas.py  types.py  utils.py
tjosa/formatter/: FallbackFormatter.py  __init__.py  format_fallback.py
tjosa/mappings/: ConversionMap.py  __init__.py  josa.py
tjosa/rules/: ConversionRule.py  JongsungExceptRieulRule.py  JongsungRule.py  __init__.py
