[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tjosa"
version = "0.1.0"
description = "t-string을 지원하는 Python 한국어 조사 처리 라이브러리"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "hsl0" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0,<10",
  "pytest-cov>=7.0.0,<8",
  "pylint>=3.3.0",
]

[tool.pytest.ini_options]
testpaths = ["test", "tjosa.py"]
python_files = ["*.py"]
addopts = "--doctest-modules"
markers =
	replace: 전체 문장 변환 함수
	select: 단일 단어 조사 판별 함수

[tool.pylint.main]
py-version = "3.14"

[tool.pylint.format]
max-line-length = 100
