[build-system]
requires = ["hatchling>=1.29.0,<2"]
build-backend = "hatchling.build"

[project]
name = "tjosa"
version = "0.1.0"
description = "t-string을 지원하는 Python 한국어 조사 처리 라이브러리"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "hsl0", email = "hsl0@outlook.kr" }]
keywords = ["t-string", "korean", "josa", "tossi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Repository = "https://github.com/hsl0/tjosa.git"
Issues = "https://github.com/hsl0/tjosa/issues"
Changelog = "https://github.com/hsl0/tjosa/releases"


[project.optional-dependencies]
dev = [
  "pytest>=9.0.0,<10",
  "pytest-cov>=7.0.0,<8",
  "pylint>=3.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tjosa.py"]
include = ["tjosa.py", "README.md", "LICENSE"]

[tool.hatch.build.targets.sdist]
include = ["tjosa.py", "README.md", "LICENSE"]


[tool.pytest.ini_options]
testpaths = ["test", "tjosa.py"]
python_files = ["*.py", "!perftest.py"]
addopts = "--doctest-modules --ignore=test/perftest.py"
markers = [
	"replace: 전체 문장 변환 함수",
	"select: 단일 단어 조사 판별 함수"
]

[tool.pylint.main]
py-version = "3.14"
ignore = ["test/perftest.py"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
  "no-else-return"
]

[tool.flake8]
filename = "*.py, test/*.py"
exclude = ".*/**"
